# hermes-sap-aicore-plugin

./: .gitignore  README.md  pyproject.toml
src/hermes_sap_aicore/: __init__.py  config.py  installer.py  provider.py  proxy.py
tests/: test_config.py  test_installer.py  test_proxy.py
