[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-sap-aicore-plugin"
version = "0.1.0"
description = "Hermes Agent model-provider plugin for SAP AI Core Generative AI Hub deployments"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Soeren Leibach" }]
license = { text = "MIT" }
keywords = ["hermes-agent", "sap", "sap-ai-core", "generative-ai-hub"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
sap-aicore-hermes-proxy = "hermes_sap_aicore.proxy:main"
hermes-sap-aicore-install = "hermes_sap_aicore.installer:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
